hard-gists/937534/run.log
=== Docker Run Log for 937534 ===
Started at: Mi 29. Okt 18:24:04 CET 2025

[2025-10-29 18:24:05] START: Running container for 937534
[2025-10-29 18:24:05] SUCCESS: Container 2af14adfafe417300a289d33e9d2fbfac4cfe3c0e76fbe4635b1e235f7c07fa3 started for 937534
=== Container logs for 937534 ===
  File "/snippet.py", line 36
    print "Usage: fmri_tsnr [options] nifti_dir"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 937534 ===
[2025-10-29 18:24:07] INFO: Container 2af14adfafe417300a289d33e9d2fbfac4cfe3c0e76fbe4635b1e235f7c07fa3 has stopped
